# jbq

./: AGENT_NATIVE.org  ANALYSIS_TODO.org  BENCHMARKS.org  ERROR_HANDLING.org  LICENSE  Makefile  PARALLELISM.org  PLAN.org  README.md  SCHEMA_IMPL.org  SIMDJSON_CLAIM_AUDIT.org  SIMDJSON_IMPLEMENTATION.org  TRAVERSAL_FUNCTIONS.org  context.org  dune-project  jbq.opam  jx.opam
bench/: bench_lazy.ml  dune  generate_data.sh  run.sh
bench/data/: large.json  medium.json  nested.json  small.json
lib/: ast.ml  cli_args.ml  dune  error.ml  interpreter.ml  lexer.ml  parser.ml  printer.ml  schema.ml  simdjson_native.ml  simdjson_stream.ml  simdjson_stubs.cpp  stdlib_fns.ml  transducer.ml  value.ml
logo/: coldwar.jbq  coldwar.json  dossier.jbq  dossier.json  logo.svg.mustache
test/: dune  smoke.sh  test_jbq.ml  test_jx.ml
